--- a/_config.yml
+++ b/_config.yml
@@ -274,7 +274,7 @@ display_categories: ['blockquotes'] # these categories will be displayed on the 
 scholar:
 
   last_name: [Tokatli]
-  first_name: [Ozan]
+  first_name: [O.]
 
   style: apa
   locale: en
