--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -2,96 +2,75 @@
   type: map
   contents:
     - name: Full Name
-      value: Albert Einstein
-    - name: Date of Birth
-      value: 14th March 1879
+      value: Ozan Tokatli
     - name: Languages
-      value: English, German
+      value: Turkish, English
 
 - title: Education
   type: time_table
   contents:
     - title: PhD
-      institution: University of Zurich, Zurich, Switzerland
-      year: 1905
+      institution: Sabanci University, Istanbul, Turkey
+      year: 2010 - 2015
       description:
-        - Description 1.
-        - Description 2.
-        - title: Description 3.
-          contents:
-            - Sub-description 1.
-            - Sub-description 2.
-    - title: Federal teaching diploma
-      institution: Eidgenössische Technische Hochschule, Zurich, Switzerland
-      year: 1900
+        - Fractional order control in haptics
+    - title: MSc
+      institution: Sabanci University, Istanbul, Turkey
+      year: 2008 - 2010
       description:
-        - Description 1.
-        - Description 2.
+        - A novel approach to micro-telemanipulation with soft slave robots Integrated design of a non-overshooting series elastic actuator
+    - title: BSc
+      institution: Sabanci University, Istanbul, Turkey
+      year: 2004 - 2008
 
 - title: Experience
   type: time_table
   contents:
-    - title: Professor of Theoretical Physics
-      institution: Institute for Advanced Study, Princeton University
-      year: 1933 - 1955
-      description:
-        - Description 1.
-        - Description 2.
-        - title: Description 3.
-          contents:
-            - Sub-description 1.
-            - Sub-description 2.
-    - title: Visiting Professor
-      institution: California Institute of Technology, Pasadena, California, US
-      year: 1933
-      description:
-        - Description 1.
-        - Description 2.
-
-    - title: Director
-      institution: Kaiser Wilhelm Institute for Physics, Berlin, Germany.
-      year: 1917-1933
-
-    - title: Professor of Theoretical Physics
-      institution: Karl-Ferdinand University, Prague, Czechoslovakia
-      year: 1911 - 1917
-      description:
-
-    - title: Associate Professor of Theoretical Physics
-      institution: University of Zurich, Zurich, Switzerland
-      year: 1909 - 1911
+    - title: Senior Robotics Researcher
+      institution: United Kingdom Atomic Energy Authority, Culham, UK
+      year: 2018 - present
+    - title: Visiting Researcher
+      institution: University of Oxford, Oxford, UK
+      year: 2021
+    - title: Post-doctoral Research Assistant
+      institution: University of Reading, Reading, UK
+      year: 2015 - 2018
 
 - title: Open Source Projects
   type: time_table
   contents:
-    - title: <a href="https://github.com/alshedivat/al-folio">al-folio</a>
-      year: 2015-now
-      description: A beautiful, simple, clean, and responsive Jekyll theme for academics.
+    - title: <a href="https://pypi.org/project/pyKinovaGen3/">pyKinovaGen3</a>
+      description: A library of Python function for the kinematic and dynamic equations of Kinova Gen3 robot.
+    - title: <a href="https://pypi.org/project/smooth-trajectory/">smooth-trajectory</a>
+      description: A package for generating straight line trajectories in SE(3) with time scaling for smoothness.
+    - title: <a href="https://pypi.org/project/haptic-master/">haptic-master</a>
+      description: A package for controlling the HapticMaster robot using TCP/IP.
+    - title: <a href="https://github.com/otokatli/libKinovaGen3">libKinovaGen3</a>
+      description: A C++ library for the kinematics and dynamics model of the Kinova Gen3 robot.
+    - title: <a href="https://github.com/otokatli/libSmoothTrajectory">libSmoothTrajectory</a>
+      description:  A C++ library for generating straight line trajectories in SE(3) with time scaling for smoothness.
+    - title: <a href="https://hub.docker.com/repository/docker/otokatli/kinova-dev/general">kinova-dev</a>
+      description:  A container for developing Kinova application with C++.
+    
 
 - title: Honors and Awards
   type: time_table
   contents:
-    - year: 1921
+    - year: 2008 - 2010
       items: 
-        - Nobel Prize in Physics 
-        - Matteucci Medal
-    - year: 2029
+        - TUBITAK BIDEB Postgraduate Research Scholarship
+    - year: 2010 - 2015
       items: 
-        - Max Planck Medal
+        - TUBITAK BIDEB Doctorate Research Scholarship 
 
 - title: Academic Interests
   type: nested_list
   contents:
-    - title: Topic 1.
+    - title:
       items: 
-        - Description 1.
-        - Description 2.
-    - title: Topic 2.
-      items:
-        - Description 1.
-        - Description 2.
-
-- title: Other Interests
-  type: list
-  contents:
-    - <u>Hobbies:</u> Hobby 1, Hobby 2, etc.
+        - Haptics and teleoperation
+        - Physical human-robot interaction
+        - Non-prehensile manipulation
+        - Kinematics and dynamics
+        - Interaction control
+        - Robotics
